# seekcamera-glass-detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: rendering.h  thermal_distance_sensor.h
src/: main.cpp  rendering.cpp  seekcamera-glass-detector.cpp  thermal_distance_sensor.cpp
